# parser

./: docker-compose.yml  main.py  pyproject.toml
parser/models/: models.py
parser/repos/: __init__.py  spimex_repo.py
parser_x/: .env.template  __init__.py  app.py  async_app.py  database.py  fastapi_app.py  main.py  sync_app.py
parser_x/api/: spimex.py
parser_x/api/dependencies/: __init__.py
parser_x/core/: __init__.py  сonfig.py
parser_x/models/: __init__.py  db_helper.py  spx_model.py
parser_x/repos/: __init__.py  data_base_repo.py  spimex_repo.py
parser_x/schemas/: __init__.py  parse_info_schema.py
parser_x/services/: __init__.py  async_download_service.py  async_read_service.py  download_service.py  read_service.py  spimex_api_service.py  sync_download_service.py  sync_read_service.py
parser_x/tools/: __init__.py  pydantic_to_sqlalc.py
spimex_service/: .env.template  main.py
spimex_service/api/: __init__.py  spimex.py
spimex_service/api/dependencies/: __init__.py  dependencies.py  dependencies_repos.py  redis_client.py
spimex_service/core/: config.py
spimex_service/models/: db_helper.py
spimex_service/repos/: __init__.py  db_repo.py  redis_repo.py
spimex_service/schemas/: __init__.py  parse_info_schema.py
spimex_service/services/: __init__.py  spimex_api_service.py
spimex_service/tools/: __init__.py  redis_form.py
