[tool.poetry]
name = "parser"
version = "0.1.0"
description = ""
authors = ["AleksGin <alexanderginin@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.11.11"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.37"}
asyncpg = "^0.30.0"
pydantic-settings = "^2.7.1"
bs4 = "^0.0.2"
aiofiles = "^24.1.0"
pandas = "^2.2.3"
xlrd = ">=2.0.1"
requests = "^2.32.3"
psycopg = "^3.2.4"
psycopg-binary = "^3.2.4"
fastapi = "^0.115.8"
redis = "^5.2.1"
uvicorn = "^0.34.0"
orjson = "^3.10.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
